--- a/style.css
+++ b/style.css
@@ -48,3 +48,81 @@ header{
 #search-form button:hover{
 background-color: #cc1c13;
 }
+#video-list{
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+padding: 20px;
+}
+.video-item{
+  width: 300px;
+  margin: 15px;
+  background-color: #ffffff;
+  border-radius: 4px;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 20px 5px rgba(0, 0, 0, 0.1);
+}
+.video-thumbnail{
+  width: 100%;
+  height: 170px;
+  background-size:cover;
+  background-position: center;
+}
+.video-info{
+  padding: 10px;
+}
+.video-title{
+  font-size: 16px;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+.video-channel{
+  color: #606066;
+  font-size: 14px;
+}
+.model{
+  display: none;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(0, 0, 0, 0.6);
+}
+.model-content{
+position: relative;
+margin: 5% auto;
+width: 80%;
+max-width: 800px;
+}
+#video-player{
+  background-color: white;
+  width: 100%;
+  height: 450px;
+}
+#close-model{
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  color: white ;
+  font-size: 30px;
+  font-weight: bold;
+  background-color: #000;
+  border-radius: 50%;
+  padding: 0 10px;
+  cursor: pointer;
+  
+}
+#download-mp3{
+  display: block;
+  margin: 20px auto;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #e62117;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
